--- a/project/auth-client/src/App.css
+++ b/project/auth-client/src/App.css
@@ -5,7 +5,7 @@
     align-items: center;
     position: relative;
     padding: 0.5rem 0rem;
-    background-color: rgb(162, 173, 168);
+    background-color: rgb(85, 85, 85);
     color: black;
     box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.5);
 }
@@ -24,7 +24,7 @@
 }
 
 .navmenu li a {
-    color: black;
+    color: lightgrey;
     text-decoration: none;
     display: block;
     width: 100%;
@@ -37,7 +37,7 @@
     width: 40px;
     padding: 0.5rem;
     border-radius: 50%;
-    background-color: #000000;
+    background-color: black;
     cursor: pointer;
     transition: background-color 0.2s ease-in-out;
 
@@ -49,7 +49,7 @@
 }
 
 .hamburger:hover {
-    background-color: blue;
+    background-color: rgb(168, 168, 168);
 }
 /* Nav transitioning  */
 @media screen and (max-width: 768px) {
