--- a/project/auth-client/src/App.css
+++ b/project/auth-client/src/App.css
@@ -8,6 +8,28 @@
     background-color: rgb(85, 85, 85);
     color: black;
     box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.5);
+    margin-bottom: 50px;
+}
+
+.navbar li div:hover {
+    color: #8a8aac;
+    text-decoration: underline;
+}
+
+.navbar button {
+    box-shadow: 0px 0px 2px 2px rgb(0,0,0);
+     top:50%;
+     background-color:#6d6d8a;
+     padding: 0.3 rem;
+     color: #fff;
+     border:none;
+     border-radius:10px;
+     font-family: 'Roboto', sans-serif;
+     margin-right: 15px;
+}
+
+.navbar button:hover {
+    background-color: #8e8ea1;
 }
 
 .navmenu {
@@ -92,6 +114,51 @@
     }
   }
 
-  .vchart{
-    width: 95%;
+  /* V1-V5 charts*/
+  .line-chart {
+    background-color: rgba(221, 217, 217, 0.178);
+    border-radius: 10px;
+    width: 70%;
+  margin: auto;
+}
+
+.doughnut-chart {
+    background-color: rgba(221, 217, 217, 0.178);
+    border-radius: 10px;
+     width: 50%;
+  margin: auto;
+}
+
+.chart-texts {
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+}
+
+.chart-texts a {
+    color: #387d92;
+  text-decoration: none;
+  transition: color 0.3s ease-in-out;
+}
+
+.chart-texts a:hover {
+    color: #FF6A5C;
+    text-decoration: underline;
   }
+
+  /* other pages  */
+
+  .page-texts {
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+  }
+
+  .page-texts a {
+    color: #387d92;
+    text-decoration: none;
+    transition: color 0.3s ease-in-out;
+  }
+
+  .page-texts a:hover {
+    color: #FF6A5C;
+    text-decoration: underline;
+  } 
